[tool.poetry]
name = "subl"
version = "0.1.0"
description = "Next-generation feed reader"
authors = ["fluffy <fluffy@beesbuzz.biz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
flask = "^2.2.3"
sqlalchemy = "^2.0.7"
flask-caching = "^2.0.2"
authl = "^0.7.0"

[tool.poetry.dev-dependencies]
pylint = "*"
mypy = "*"
flake8 = "*"
autopep8 = "*"
pytest = "*"
coverage = "*"
isort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
